--- a/examples/feb-26-2023/buildspec.yml
+++ b/examples/feb-26-2023/buildspec.yml
@@ -26,6 +26,6 @@ phases:
       # - npm run build:ci
   post_build:
     commands:
-      # copy files to s3
-      - aws s3 sync . s3://my-s3-test-website-bucket --acl 'public-read' --delete
-      - aws cloudfront create-invalidation --distribution-id E1XZQXQZJQZJ9 --paths "/*"
+      # # copy files to s3
+      # - aws s3 sync . s3://my-s3-test-website-bucket --acl 'public-read' --delete
+      # - aws cloudfront create-invalidation --distribution-id E1XZQXQZJQZJ9 --paths "/*"
